# lynx_vector_db

./: .gitignore  ANALYSIS.md  CLAUDE.md  CMakeLists.txt  CONCEPT.md  Makefile  README.md  STATE.md  TODOS.md  compare_indices  context.py  run_flat.txt  run_hnsw.txt  setup.sh  write_log.md
.claude/: settings.local.json
.github/workflows/: c-cpp.yml
benchmarks/: README.md  chromadb_test.py  compare_benchmarks.py  faiss_test.cpp  lynx_test.cpp  run_faiss_benchmark.sh  run_lynx_benchmark.sh
cmake/: GenerateCoverage.cmake
doc/: ANALYSIS.md  MIGRATION_GUIDE.md  MPS_ARCHITECTURE.md  research.md  write_log_impl.md
src/: compare_indices.cpp  main.cpp  main_minimal.cpp
src/include/lynx/: lynx.h  utils.h
src/lib/: flat_index.cpp  flat_index.h  hnsw_index.cpp  hnsw_index.h  ivf_index.cpp  ivf_index.h  kmeans.cpp  kmeans.h  lynx.cpp  lynx_intern.h  mps_messages.h  mps_workers.h  placeholder.cpp  record_iterator.cpp  record_iterator_impl.h  utils.cpp  utils.h  vector_database.cpp  vector_database.h  vector_database_flat.cpp  vector_database_flat.h  vector_database_hnsw.cpp  vector_database_hnsw.h  vector_database_impl.cpp  vector_database_impl.h  vector_database_ivf.cpp  vector_database_ivf.h  vector_database_mps.cpp  vector_database_mps.h  write_log.h
src/unused/: mps_messages.h  mps_workers.h
tests/: README.md  bench_threading.cpp  test_config.cpp  test_data_structures.cpp  test_database.cpp  test_distance_metrics.cpp  test_flat_index.cpp  test_flat_index_integration.cpp  test_hnsw.cpp  test_iterator.cpp  test_ivf_benchmarks.cpp  test_ivf_index.cpp  test_kmeans.cpp  test_lynx_coverage.cpp  test_main.cpp  test_minimal_example.cpp  test_mps.cpp  test_persistence.cpp  test_threading.cpp  test_unified_benchmarks.cpp  test_unified_database_integration.cpp  test_utility_functions.cpp  test_vector_database.cpp  test_write_log.cpp
tickets/: 1000_ticket.md  1006_ticket.md  2000_ticket.md  2001_ticket.md  2004_ticket.md  2005_ticket.md  2010_ticket.md  2050_ticket.md  2051_ticket.md  2054_ticket.md  2054_ticket_design.md  2055_ticket.md  2056_ticket.md  2058_ticket.md  2059_ticket.md  2060_ticket.md  2061_ticket.md  2062_ticket.md  2062_ticket_validation_report.md  2063_ticket.md  2072_benchmark_results.txt  2072_clang_tidy_results.txt  2072_tsan_results.txt  2072_ubsan_results.txt  2073_ticket.md  2080_ticket.md  2081_ticket.md  2082_ticket.md  2090_profile_full.txt  2090_profile_report.txt  2090_ticket.md  2100_ticket.md  2500_ticket.md  README.md  ticket_template.md
tickets/done/: 1000_ticket_result.md  1005_ticket.md  1005_ticket_result.md  1006_ticket_result.md  1010_ticket.md  1010_ticket_result.md  2000_ticket.md  2001_ticket_result.md  2002_ticket.md  2002_ticket_result.md  2003_ticket.md  2003_ticket_result.md  2004_ticket.md  2010_ticket_result.md  2020_ticket.md  2020_ticket_result.md  2030_ticket.md  2030_ticket_result.md  2040_ticket.md  2040_ticket_result.md  2050_ticket.md  2052_ticket.md  2052_ticket_result.md  2053_ticket.md  2053_ticket_result.md  2054_ticket.md  2054_ticket_design.md  2054_ticket_result.md  2054_ticket_test_fixes.md  2055_ticket_result.md  2056_ticket.md  2056_ticket_result.md  2057_test_results.md  2057_ticket.md  2058_ticket_result.md  2059_ticket.md  2059_ticket_result.md  2060_ticket.md  2060_ticket_result.md  2061_ticket_result.md  (+13 more)
